	+ User quotas are now stored in configuration backup and users directory
	+ Bug fix: Share size is estimated although some files cannot be read
	+ Bug fix: Removed permissions are actually removed
	+ The files in a group share can be modified by all the members in the
	  group
	+ Show forbidden paths in the "Path not allowed" exception text
2.0.7
	+ Removed printers are ignored during backup restore
	+ Added backup domain
	+ Added printers as restore dependency
2.0.6
	+ Check for incompatibility between PDC and PAM on slaves
	+ Improved performance by adding samba LDAP indexes
	+ Only set shares ACL if needed
	+ Set default order for dashboard widgets
2.0.5
	+ Only ASCII characters are now allowed for share names and comments
	+ Bug fix: guest shares also work if PDC not enabled
2.0.4
	+ Fixed quarantine folder permissions
	+ Don't ask for password in guest shares
2.0.3
	+ Bug fix: guest shares now work on Windows clients
	+ Fixed log retrieving for quarantine alerts
2.0.2
	+ Fixed problems in backup restoration
	+ Bug fix: support users and groups with spaces and so on in ACLs
2.0.1
	+ Bug fix: cups daemon is now started before samba one
	+ Bug fix: samba can be enabled now if filesystem does not support quotas
	+ Removed warning due to mix numeric and string values in printer hash.
	+ New CUPS printers are also stored in redis when editing groups
	+ Deleted obsolete code regarding external/non-external printers
1.5.9
	+ Rebranded domain name and description
1.5.8
	+ Zentyal rebrand
	+ On smb.conf.mas: use client driver = no to allow printer server
	  to give clients the uploaded drivers.
1.5.7
	+ Avoid antivirus scan on large files to fix read problems
	+ Add a keyconf to Samba listen on external interfaces
	+ Added more report subsections
1.5.6
	+ Move NSS from ebox-samba to ebox-usersandgroups
	+ Home directories are under /home now
	+ Shares permissions model now states if the ACL is for a user or a group
1.5.5