@@ -6,6 +6,7 @@ HEAD
 	+ The files in a group share can be modified by all the members in the
 	  group
 	+ Show forbidden paths in the "Path not allowed" exception text
+	+ Truncate the resource field to avoid overflow error of log database
 2.0.7
 	+ Removed printers are ignored during backup restore
 	+ Added backup domain
